@@ -119,193 +119,199 @@
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdecho">2.7 Echo Strings and Variables (echo)</a>
+    <a href="#cmddf">2.7 Show volume status (df)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdexec">2.8 Execute User Code (exec)</a>
+    <a href="#cmdecho">2.8 Echo Strings and Variables (echo)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdexit">2.9 Exit NSH (exit)</a>
+    <a href="#cmdexec">2.9 Execute User Code (exec)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdfree">2.10 Show Memory Manager Status (free)</a>
+    <a href="#cmdexit">2.10 Exit NSH (exit)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdget">2.11 Get File Via TFTP (get)</a>
+    <a href="#cmdfree">2.11 Show Memory Manager Status (free)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdhelp">2.12 Show Usage Command Usage (help)</a>
+    <a href="#cmdget">2.12 Get File Via TFTP (get)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdifconfig">2.13 Show Network Configuration (ifconfig)</a>
+    <a href="#cmdhelp">2.13 Show Usage Command Usage (help)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdkill">2.14 Send a signal to a task (kill)</a>
+    <a href="#cmdifconfig">2.14 Show Network Configuration (ifconfig)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdlosetup">2.15 Setup/teardown the Loop Device (losetup)</a>
+    <a href="#cmdkill">2.15 Send a signal to a task (kill)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdls">2.16 List Directory Contents (ls)</a>
+    <a href="#cmdlosetup">2.16 Setup/teardown the Loop Device (losetup)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmbhw">2.17 Access Memory (mb, mh, and mw)</a>
+    <a href="#cmdls">2.17 List Directory Contents (ls)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdps">2.18 Show Current Tasks and Threads (ps)</a>
+    <a href="#cmdmbhw">2.18 Access Memory (mb, mh, and mw)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkdir">2.19 Create a Directory (mkdir)</a>
+    <a href="#cmdps">2.19 Show Current Tasks and Threads (ps)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkfatfs">2.20 Create a FAT Filesystem (mkfatfs)</a>
+    <a href="#cmdmkdir">2.20 Create a Directory (mkdir)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkfifo">2.21 Create a FIFO (mkfifo)</a>
+    <a href="#cmdmkfatfs">2.21 Create a FAT Filesystem (mkfatfs)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkrd">2.22 Create a RAMDISK (mkrd)</a>
+    <a href="#cmdmkfifo">2.22 Create a FIFO (mkfifo)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmount">2.23 Mount a File System (mount)</a>
+    <a href="#cmdmkrd">2.23 Create a RAMDISK (mkrd)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmv">2.24 Rename a File (mv)</a>
+    <a href="#cmdmount">2.24 Mount a File System (mount)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdnfsmount">2.25 Mount an NFS file system (nfsmount)</a>
+    <a href="#cmdmv">2.25 Rename a File (mv)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdping">2.26 Check Network Peer (ping)</a>
+    <a href="#cmdnfsmount">2.26 Mount an NFS file system (nfsmount)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdput">2.27 Send File Via TFTP (put)</a>
+    <a href="#cmdping">2.27 Check Network Peer (ping)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdpwd">2.28 Show Current Working Directory (pwd)</a>
+    <a href="#cmdput">2.28 Send File Via TFTP (put)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdrm">2.29 Remove a File (rm)</a>
+    <a href="#cmdpwd">2.29 Show Current Working Directory (pwd)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdrmdir">2.30 Remove a Directory (rmdir)</a>
+    <a href="#cmdrm">2.30 Remove a File (rm)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdset">2.31 Set an Environment Variable (set)</a>
+    <a href="#cmdrmdir">2.31 Remove a Directory (rmdir)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdsh">2.32 Execute an NSH Script (sh)</a>
+    <a href="#cmdset">2.32 Set an Environment Variable (set)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdsleep">2.33 Wait for Seconds (sleep)</a>
+    <a href="#cmdsh">2.33 Execute an NSH Script (sh)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdunmount">2.34 Unmount a File System (umount)</a>
+    <a href="#cmdsleep">2.34 Wait for Seconds (sleep)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdunset">2.35 Unset an Environment Variable (unset)</a>
+    <a href="#cmdunmount">2.35 Unmount a File System (umount)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdusleep">2.36 Wait for Microseconds (usleep)</a>
+    <a href="#cmdunset">2.36 Unset an Environment Variable (unset)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdwget">2.37 Get File Via HTTP (wget)</a>
+    <a href="#cmdusleep">2.37 Wait for Microseconds (usleep)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdxd">2.38 Hexadecimal Dump (xd)</a>
+    <a href="#cmdwget">2.38 Get File Via HTTP (wget)</a>
+  </td>
+</tr>
+<tr>
+  <td><br></td>
+  <td>
+    <a href="#cmdxd">2.39 Hexadecimal Dump (xd)</a>
   </td>
 </tr>
 <tr>
@@ -872,7 +878,35 @@ nsh&gt; dd if=/dev/ram0 of=/dev/null
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdecho"><h2>2.7 Echo Strings and Variables (echo)</h2></a>
+    <a name="cmddf"><h2>2.7 Show Volument Status (df)</h2></a>
+  </td>
+  </tr>
+</table>
+<p><b>Command Syntax:</b></p>
+<ul><pre>
+df
+</pre></ul>
+<p>
+  <b>Synopsis</b>.
+    Show the state of each mounted volume.
+    As an example:
+</p>
+<ul><pre>
+nsh> mount
+ /etc type romfs
+  /tmp type vfat
+nsh> df
+  Block  Number
+  Size   Blocks     Used Available Mounted on
+    64        6        6         0 /etc
+   512      985        2       983 /tmp
+nsh> 
+</pre></ul>
+
+<table width ="100%">
+  <tr bgcolor="#e4e4e4">
+  <td>
+    <a name="cmdecho"><h2>2.8 Echo Strings and Variables (echo)</h2></a>
   </td>
   </tr>
 </table>
@@ -890,7 +924,7 @@ echo [&lt;string|$name&gt; [&lt;string|$name&gt;...]]
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdexec"><h2>2.8 Execute User Code (exec)</h2></a>
+    <a name="cmdexec"><h2>2.9 Execute User Code (exec)</h2></a>
   </td>
   </tr>
 </table>
@@ -909,7 +943,7 @@ exec &lt;hex-address&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdexit"><h2>2.9 Exit NSH (exit)</h2></a>
+    <a name="cmdexit"><h2>2.10 Exit NSH (exit)</h2></a>
   </td>
   </tr>
 </table>
@@ -928,7 +962,7 @@ exit
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdfree"><h2>2.10 Show Memory Manager Status (free)</h2></a>
+    <a name="cmdfree"><h2>2.11 Show Memory Manager Status (free)</h2></a>
   </td>
   </tr>
 </table>
@@ -970,7 +1004,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdget"><h2>2.11 Get File Via TFTP (get)</h2></a>
+    <a name="cmdget"><h2>2.12 Get File Via TFTP (get)</h2></a>
   </td>
   </tr>
 </table>
@@ -1005,7 +1039,7 @@ get [-b|-n] [-f &lt;local-path&gt;] -h &lt;ip-address&gt; &lt;remote-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdhelp"><h2>2.12 Show Usage Command Usage (help)</h2></a>
+    <a name="cmdhelp"><h2>2.13 Show Usage Command Usage (help)</h2></a>
   </td>
   </tr>
 </table>
@@ -1022,7 +1056,7 @@ help
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdifconfig"><h2>2.13 Show Network Configuration (ifconfig)</h2></a>
+    <a name="cmdifconfig"><h2>2.14 Show Network Configuration (ifconfig)</h2></a>
   </td>
   </tr>
 </table>
@@ -1073,7 +1107,7 @@ ifconfig nic_name ip_address
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdkill"><h2>2.14 Send a signal to a task (kill)</h2></a>
+    <a name="cmdkill"><h2>2.15 Send a signal to a task (kill)</h2></a>
   </td>
   </tr>
 </table>
@@ -1114,7 +1148,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdlosetup"><h2>2.15 Setup/teardown the Loop Device (losetup)</h2></a>
+    <a name="cmdlosetup"><h2>2.16 Setup/teardown the Loop Device (losetup)</h2></a>
   </td>
   </tr>
 </table>
@@ -1167,7 +1201,7 @@ losetup d &lt;dev-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdls"><h2>2.16 List Directory Contents (ls)</h2></a>
+    <a name="cmdls"><h2>2.17 List Directory Contents (ls)</h2></a>
   </td>
   </tr>
 </table>
@@ -1204,7 +1238,7 @@ ls [-lRs] &lt;dir-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmbhw"><h2>2.17 Access Memory (mb, mh, and mw)</h2></a>
+    <a name="cmdmbhw"><h2>2.18 Access Memory (mb, mh, and mw)</h2></a>
   </td>
   </tr>
 </table>
@@ -1258,7 +1292,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdps"><h2>2.18 Show Current Tasks and Threads (ps)</h2></a>
+    <a name="cmdps"><h2>2.19 Show Current Tasks and Threads (ps)</h2></a>
   </td>
   </tr>
 </table>
@@ -1284,7 +1318,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkdir"><h2>2.19 Create a Directory (mkdir)</h2></a>
+    <a name="cmdmkdir"><h2>2.20 Create a Directory (mkdir)</h2></a>
   </td>
 </tr>
 </table>
@@ -1319,7 +1353,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkfatfs"><h2>2.20 Create a FAT Filesystem (mkfatfs)</h2></a>
+    <a name="cmdmkfatfs"><h2>2.21 Create a FAT Filesystem (mkfatfs)</h2></a>
   </td>
 </tr>
 </table>
@@ -1339,7 +1373,7 @@ mkfatfs &lt;path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkfifo"><h2>2.21 Create a FIFO (mkfifo)</h2></a>
+    <a name="cmdmkfifo"><h2>2.22 Create a FIFO (mkfifo)</h2></a>
   </td>
 </tr>
 </table>
@@ -1377,7 +1411,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkrd"><h2>2.22 Create a RAMDISK (mkrd)</h2></a>
+    <a name="cmdmkrd"><h2>2.23 Create a RAMDISK (mkrd)</h2></a>
   </td>
 </tr>
 </table>
@@ -1428,7 +1462,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmount"><h2>2.23 Mount a File System (mount)</h2></a>
+    <a name="cmdmount"><h2>2.24 Mount a File System (mount)</h2></a>
   </td>
 </tr>
 </table>
@@ -1507,7 +1541,7 @@ nsh> mount
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmv"><h2>2.24 Rename a File (mv)</h2></a>
+    <a name="cmdmv"><h2>2.25 Rename a File (mv)</h2></a>
   </td>
   </tr>
 </table>
@@ -1525,7 +1559,7 @@ mv &lt;old-path&gt; &lt;new-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdnfsmount"><h2>2.25 Mount an NFS file system (nfsmount)</h2></a>
+    <a name="cmdnfsmount"><h2>2.26 Mount an NFS file system (nfsmount)</h2></a>
   </td>
   </tr>
 </table>
@@ -1544,7 +1578,7 @@ nfsmount &lt;server-address&gt; &lt;mount-point&gt; &lt;remote-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdping"><h2>2.26 Check Network Peer (ping)</h2></a>
+    <a name="cmdping"><h2>2.27 Check Network Peer (ping)</h2></a>
   </td>
   </tr>
 </table>
@@ -1577,7 +1611,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdput"><h2>2.27 Send File Via TFTP (put)</h2></a>
+    <a name="cmdput"><h2>2.28 Send File Via TFTP (put)</h2></a>
   </td>
   </tr>
 </table>
@@ -1612,7 +1646,7 @@ put [-b|-n] [-f &lt;remote-path&gt;] -h &lt;ip-address&gt; &lt;local-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdpwd"><h2>2.28 Show Current Working Directory (pwd)</h2></a>
+    <a name="cmdpwd"><h2>2.29 Show Current Working Directory (pwd)</h2></a>
   </td>
   </tr>
 </table>
@@ -1642,7 +1676,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdrm"><h2>2.29 Remove a File (rm)</h2></a>
+    <a name="cmdrm"><h2>2.30 Remove a File (rm)</h2></a>
   </td>
 </tr>
 </table>
@@ -1676,7 +1710,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdrmdir"><h2>2.30 Remove a Directory (rmdir)</h2></a>
+    <a name="cmdrmdir"><h2>2.31 Remove a Directory (rmdir)</h2></a>
   </td>
 </tr>
 </table>
@@ -1711,7 +1745,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdset"><h2>2.31 Set an Environment Variable (set)</h2></a>
+    <a name="cmdset"><h2>2.32 Set an Environment Variable (set)</h2></a>
   </td>
   </tr>
 </table>
@@ -1737,7 +1771,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdsh"><h2>2.32 Execute an NSH Script (sh)</h2></a>
+    <a name="cmdsh"><h2>2.33 Execute an NSH Script (sh)</h2></a>
   </td>
   </tr>
 </table>
@@ -1755,7 +1789,7 @@ sh &lt;script-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdsleep"><h2>2.33 Wait for Seconds (sleep)</h2></a>
+    <a name="cmdsleep"><h2>2.34 Wait for Seconds (sleep)</h2></a>
   </td>
   </tr>
 </table>
@@ -1772,7 +1806,7 @@ sleep &lt;sec&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdunmount"><h2>2.34 Unmount a File System (umount)</h2></a>
+    <a name="cmdunmount"><h2>2.35 Unmount a File System (umount)</h2></a>
   </td>
 </tr>
 </table>
@@ -1802,7 +1836,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdunset"><h2>2.35 Unset an Environment Variable (unset)</h2></a>
+    <a name="cmdunset"><h2>2.36 Unset an Environment Variable (unset)</h2></a>
   </td>
   </tr>
 </table>
@@ -1828,7 +1862,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdusleep"><h2>2.36 Wait for Microseconds (usleep)</h2></a>
+    <a name="cmdusleep"><h2>2.37 Wait for Microseconds (usleep)</h2></a>
   </td>
   </tr>
 </table>
@@ -1872,7 +1906,7 @@ wget [-o &lt;local-path&gt;] &lt;url&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdxd"><h2>2.37 Hexadecimal dump (xd)</h2></a>
+    <a name="cmdxd"><h2>2.38 Hexadecimal dump (xd)</h2></a>
   </td>
   </tr>
 </table>
@@ -1964,6 +1998,11 @@ nsh>
     <td><b><code>dd</code></b></td>
     <td><code>CONFIG_NFILE_DESCRIPTORS</code> &gt; 0</td>
     <td><code>CONFIG_NSH_DISABLE_DD</code></td>
+  </tr>
+  <tr>
+    <td><b><code>df</code></b></td>
+    <td>!<code>CONFIG_DISABLE_MOUNTPOINT</code> &amp;&amp; <code>CONFIG_NFILE_DESCRIPTORS</code> &gt; 0 &amp;&amp; <code>CONFIG_FS_READABLE</code><sup>3</sup></td>
+    <td><code>CONFIG_NSH_DISABLE_DF</code></td>
   </tr>
   <tr>
     <td><b><code>echo</code></b></td>
@@ -2647,9 +2686,10 @@ nsh>
   <li><a href="#currentwd">Current working directory</a></li>
   <li><a href="#cmddate"><code>date</code></a></li>
   <li><a href="#cmddd"><code>dd</code></a></li>
-  <li><a href="#cmdecho"><code>echo</code></a></li>
+  <li><a href="#cmddf"><code>df</code></a></li>
 </ul></td>
 <td></ul>
+  <li><a href="#cmdecho"><code>echo</code></a></li>
   <li><a href="#environvars">Environment Variables</a></li>
   <li><a href="#startupscript"><code>/etc/init.d/rcS</code></a>
   <li><a href="#cmdexec"><code>exec</code></a></li>
